<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addEventFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.fragments.AddEventFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="700dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSaveEvent"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/petaBoja"
            android:text="@string/saveEvent"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:iconTint="@color/petaBoja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textColor="@color/drugaBoja"
        android:textSize="14sp"
        android:textStyle="italic"
        app:icon="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventNameTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/eventName"
        android:inputType="text"
        android:textColor="@color/drugaBoja"
        android:textColorHint="#80A8DADC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/descriptionTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="@color/drugaBoja"
        android:textColorHint="#80A8DADC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameTv" />

    <EditText
        android:id="@+id/urlTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/url"
        android:inputType="text"
        android:textColor="@color/drugaBoja"
        android:textColorHint="#80A8DADC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioritySpinner" />

    <AutoCompleteTextView
        android:id="@+id/cityTv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterCity"
        android:textColor="@color/drugaBoja"
        android:textColorHint="#80A8DADC"
        app:layout_constraintBottom_toBottomOf="@+id/btnCheckTime"
        app:layout_constraintEnd_toEndOf="@+id/descriptionTv" />

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:background="@color/trecaBoja"
        android:entries="@array/priority_array"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetDate" />

    <Button
        android:id="@+id/btnCheckTime"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:text="@string/checkTimeForLocation"
        app:layout_constraintStart_toStartOf="@+id/descriptionTv"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTv" />

    <Button
        android:id="@+id/btnSetDate"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:text="@string/setDate"
        app:layout_constraintStart_toStartOf="@+id/btnCheckTime"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckTime" />

    <Button
        android:id="@+id/btnSetTime"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/setTime"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetDate"
        app:layout_constraintEnd_toEndOf="@+id/cityTv" />

</androidx.constraintlayout.widget.ConstraintLayout>